HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuPtrAddrSpace/Expected.uv
//! Expected diagnostic metadata for the GpuPtrAddrSpace rejected-source specimen.

expectedDiagnostic("E-TYP-2641", "rule.20.GpuPtr-AddrSpace-Err")
